--- a/gulp-maxgraph/package.json
+++ b/gulp-maxgraph/package.json
@@ -50,6 +50,7 @@
     "stylelint": "^14.2.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
+    "typograf": "^6.14.1",
     "webpack": "^5.65.0",
     "webpack-stream": "^7.0.0"
   },
